--- a/html/pumaPage.html
+++ b/html/pumaPage.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/homePage.html"><i class="fas fa-house-user"></a></i></i></li>
+                <li><a href="/index.html"><i class="fas fa-house-user"></a></i></i></li>
                 <li><a href="/html/nikePage.html">NIKE</a></li>
                 <li><a href="/html/adidasPage.html">ADIDAS</a></li>
                 <li><a href="/html/vansPage.html"> VANS</a></li>
