--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
 <body>
-    <img id="background" src="/media/backround.jpg" alt="">
+    <img id="background" src="/media/backround.jpg" alt="background">
     <header>
         <nav>
             <ul>
@@ -48,7 +48,7 @@
             <div id="brandsContiner">
 
                 <article class="brandsBox">
-                    <a href="/html/nikePage.html"><img src="./media/nike snekers.jpeg" alt="nike sneakers"></a>
+                    <a href="html/nikePage.html"><img src="./media/nike snekers.jpeg" alt="nike sneakers"></a>
                     <h2>NIKE</h2>
                 </article>
 
