--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </article>
 
                 <article class="brandsBox">
-                  <a href="/html/adidasPage.html"><img src="./media/Adidas-Gazelle-Sneakers.jpg" alt="adidas sneakers"></a>
+                  <a href="html/adidasPage.html"><img src="./media/Adidas-Gazelle-Sneakers.jpg" alt="adidas sneakers"></a>
                     <h2>ADIDAS</h2>
                 </article>
 
