--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
 <body>
-    <img id="background" src="/media/backround.jpg" alt="background">
+    <img id="background" src="media/backround.jpg" alt="background">
     <header>
         <nav>
             <ul>
                 <li><i class="fas fa-house-user"></i></i></li>
                 <li> <a href="#barndsTitle">BRANDS</a></li>
                 <li><a href="#customerServiceBox"> CUSTOMER SERVICE</a></li>
-                <li><a href="/html/cartPage.html"><i class="fas fa-shopping-cart"></a></i></li>
+                <li><a href="html/cartPage.html"><i class="fas fa-shopping-cart"></a></i></li>
             </ul>
         </nav>
     </header>
@@ -58,12 +58,12 @@
                 </article>
 
                 <article class="brandsBox">
-                  <a href="/html/vansPage.html"><img src="./media/vanssnekers.webp" alt="vans sneakers"></a>
+                  <a href="html/vansPage.html"><img src="./media/vanssnekers.webp" alt="vans sneakers"></a>
                     <h2>VANS</h2>
                 </article>
 
                 <article class="brandsBox">
-                   <a href="/html/pumaPage.html"><img src="./media/puma sneakers.jpg" alt="puma sneakers"></a>
+                   <a href="html/pumaPage.html"><img src="./media/puma sneakers.jpg" alt="puma sneakers"></a>
                     <h2>PUMA</h2>
 
                 </article>
