--- a/html/adidasPage.html
+++ b/html/adidasPage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADIDAS</title>
-    <link rel="stylesheet" href="/css/adidasStyle.css">
+    <link rel="stylesheet" href="css/adidasStyle.css">
     <script src="https://kit.fontawesome.com/52c8ca7873.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
