--- a/html/cartPage.html
+++ b/html/cartPage.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img id="background" src="/media/backround.jpg">
+    <img id="background" src="media/backround.jpg">
     <header>
         <nav>
             <ul>
-                <li><a href="/index.html"><i class="fas fa-house-user"></a></i></i></li>
+                <li><a href="index.html"><i class="fas fa-house-user"></a></i></i></li>
                 <li>NIKE</li>
                 <li> ADIDAS</li>
                 <li>VANS</li>
@@ -39,7 +39,7 @@
             <i class="fab fa-amazon"></i>
         </section>
     </footer>
-    <script src="/JS/main.js"type="text/javascript"></script>
-    <script src="/JS/cart.js"></script>
+    <script src="JS/main.js"type="text/javascript"></script>
+    <script src="JS/cart.js"></script>
 </body>
 </html>
