--- a/html/nikePage.html
+++ b/html/nikePage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NIKE</title>
-    <link rel="stylesheet" href="/css/nikeStyle.css">
+    <link rel="stylesheet" href="css/nikeStyle.css">
     <script src="https://kit.fontawesome.com/52c8ca7873.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
@@ -17,11 +17,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/index.html"><i class="fas fa-house-user"></a></i></i></li>
-                <li><a href="/html/adidasPage.html">ADIDAS</a></li>
-                <li><a href="/html/vansPage.html"> VANS</a></li>
-                <li><a href="/html/pumaPage.html">PUMA</a></li>
-                <li><a href="/html/cartPage.html"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="index.html"><i class="fas fa-house-user"></a></i></i></li>
+                <li><a href="html/adidasPage.html">ADIDAS</a></li>
+                <li><a href="html/vansPage.html"> VANS</a></li>
+                <li><a href="html/pumaPage.html">PUMA</a></li>
+                <li><a href="html/cartPage.html"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -48,7 +48,7 @@
             <i class="fab fa-amazon"></i>
         </section>
     </footer>
-    <script src="/JS/main.js"type="text/javascript"></script>
-    <script src="/JS/nike.js"type="text/javascript"></script>
+    <script src="JS/main.js"type="text/javascript"></script>
+    <script src="JS/nike.js"type="text/javascript"></script>
 </body>
 </html>
