--- a/html/vansPage.html
+++ b/html/vansPage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VANS</title>
-    <link rel="stylesheet" href="/css/vansStyle.css">
+    <link rel="stylesheet" href="css/vansStyle.css">
     <script src="https://kit.fontawesome.com/52c8ca7873.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
@@ -13,15 +13,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-    <img id="background" src="/media/backround.jpg">
+    <img id="background" src="media/backround.jpg">
     <header>
         <nav>
             <ul>
-                <li><a href="/index.html"><i class="fas fa-house-user"></a></i></i></li>
-                <li><a href="/html/nikePage.html">NIKE</a></li>
-                <li><a href="/html/adidasPage.html">ADIDAS</a></li>
-                <li><a href="/html/pumaPage.html">PUMA</a></li>
-                <li><a href="/html/cartPage.html"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="index.html"><i class="fas fa-house-user"></a></i></i></li>
+                <li><a href="html/nikePage.html">NIKE</a></li>
+                <li><a href="html/adidasPage.html">ADIDAS</a></li>
+                <li><a href="html/pumaPage.html">PUMA</a></li>
+                <li><a href="html/cartPage.html"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -47,7 +47,7 @@
             <i class="fab fa-amazon"></i>
         </section>
     </footer>
-    <script src="/JS/main.js"type="text/javascript"></script>
-    <script src="/JS/vans.js"type="text/javascript"></script>
+    <script src="JS/main.js"type="text/javascript"></script>
+    <script src="JS/vans.js"type="text/javascript"></script>
 </body>
 </html>
