--- a/html/cartPage.html
+++ b/html/cartPage.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/cartStyle.css">
+    <link rel="stylesheet" href="../css/cartStyle.css">
     <script src="https://kit.fontawesome.com/52c8ca7873.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img id="background" src="media/backround.jpg">
+    <img id="background" src="../media/backround.jpg">
     <header>
         <nav>
             <ul>
@@ -39,7 +39,7 @@
             <i class="fab fa-amazon"></i>
         </section>
     </footer>
-    <script src="JS/main.js"type="text/javascript"></script>
-    <script src="JS/cart.js"></script>
+    <script src="../JS/main.js"type="text/javascript"></script>
+    <script src="../JS/cart.js"></script>
 </body>
 </html>
