--- a/html/cartPage.html
+++ b/html/cartPage.html
@@ -16,11 +16,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"><i class="fas fa-house-user"></a></i></i></li>
-                <li>NIKE</li>
-                <li> ADIDAS</li>
-                <li>VANS</li>
-                <li>PUMA</li>
+                <li><a href="../index.html"><i class="fas fa-house-user"></a></i></i></li>
+                <li><a href="./html/nikePage.html">NIKE</a></li>
+                <li><a href="./html/adidasPage.html">ADIDAS</a></li>
+                <li><a href="./html/vansPage.html"> VANS</a></li>
+                <li><a href="./html/pumaPage.html">PUMA</a></li>
             </ul>
         </nav>
     </header>
