--- a/html/vansPage.html
+++ b/html/vansPage.html
@@ -17,11 +17,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"><i class="fas fa-house-user"></a></i></i></li>
-                <li><a href="html/nikePage.html">NIKE</a></li>
-                <li><a href="html/adidasPage.html">ADIDAS</a></li>
-                <li><a href="html/pumaPage.html">PUMA</a></li>
-                <li><a href="html/cartPage.html"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="../index.html"><i class="fas fa-house-user"></a></i></i></li>
+                <li><a href="./html/nikePage.html">NIKE</a></li>
+                <li><a href="./html/adidasPage.html">ADIDAS</a></li>
+                <li><a href="./html/pumaPage.html">PUMA</a></li>
+                <li><a href="./html/cartPage.html"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
