--- a/html/adidasPage.html
+++ b/html/adidasPage.html
@@ -18,10 +18,10 @@
         <nav>
             <ul>
                 <li><a href="../index.html"><i class="fas fa-house-user"></a></i></i></li>
-                <li><a href="./html/nikePage.html">NIKE</a></li>
-                <li><a href="./html/vansPage.html"> VANS</a></li>
-                <li><a href="./html/pumaPage.html">PUMA</a></li>
-                <li><a href="./html/cartPage.html"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="../html/nikePage.html">NIKE</a></li>
+                <li><a href="../html/vansPage.html"> VANS</a></li>
+                <li><a href="../html/pumaPage.html">PUMA</a></li>
+                <li><a href="../html/cartPage.html"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
