--- a/html/cartPage.html
+++ b/html/cartPage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cart</title>
+    <link rel="icon" href="../media/cart icon.png">
     <link rel="stylesheet" href="../css/cartStyle.css">
     <script src="https://kit.fontawesome.com/52c8ca7873.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
